# nixpkgs-build-failure-notifier

./: Cargo.toml  README.md  flake.nix  shell.nix
nix/: module.nix  package.nix
src/: email.rs  hydra.rs  lib.rs  main.rs  maintainers.rs  state.rs
